[package]
name = "anytimeuniverse"
version = "0.1.0"
edition = "2024"
authors = ["GiotCa"]
license = "BSD-3-Clause"
default-run = "anytimeuniverse"

[[bin]]
name = "anytimeuniverse"
path = "src/main.rs"

[dependencies]
wgpu     = "29"
pollster = "0.4"
bytemuck = "1"
winit    = "0.30"
egui = "0.34"
egui-wgpu = "0.34"
egui-winit = "0.34"
