[package]
name = "anytimeuniverse"
version = "0.3.1"
edition = "2024"
authors = ["GiotCa"]
license = "BSD-3-Clause"
default-run = "anytimeuniverse"

[[bin]]
name = "anytimeuniverse"
path = "src/main.rs"

[dependencies]
# rendering
wgpu     = "29"
pollster = "0.4"
bytemuck = "1"
image    = "0.25.10"

# ui
winit      = "0.30"
egui       = "0.34"
egui-wgpu  = "0.34"
egui-winit = "0.34"
crossterm  = "0.29"

# audio
cpal = "0.15"

# system info
sysinfo = { version = "0.38", default-features = false, features = ["component"] }
